# arbor

./: .gitignore  DESKTOP_SETUP.md  Makefile  README.md  TAURI_ROADMAP.md  TESTING.md  TRAEFIK.md  create_tree_icon.py  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.js  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  vitest.mcp.config.ts  vitest.workspace.ts
app/: README.md
app/docs/: ARBOR_SPEC.md  PROJECT_SUMMARY.md  QUICK_START.md  README_PROJECT.md  WRITING_AI_ASSISTANT.md
apps/api/: Dockerfile  Makefile  docker-compose.yml  tsconfig.json
apps/desktop/: Makefile  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: .gitkeep  create_icon.py  generate_placeholder.sh  icon.icns
apps/desktop/src-tauri/src/: keyring.rs  main.rs
apps/key-value-store/: Makefile  README.md  docker-compose.yml
apps/mcp-server/: Makefile  tsconfig.json
apps/web/: Dockerfile  Makefile  docker-compose.yml  eslint.config.mjs  next-intl.config.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts
docs/: ARCHITECTURE.md  CHAT_UX_IMPROVEMENTS.md  DATABASE_MIGRATIONS.md  DEVELOPMENT.md  MCP_OS_CAPABILITIES.md  README.md  ROADMAP.md  TESTING_COVERAGE.md
docs/docs/: ARBOR_SPEC.md  DATABASE_DECISION.md  (+3 more)
scripts/: check-traefik.sh  make-executable.sh  setup.sh  update-traefik-config.sh
server/: openapi.yaml
tests/: setup.ts
(+354 files in other folders)
