[package]
name = "arbor"
version = "0.1.0"
description = "Arbor - Local-first AI-powered writing assistant"
authors = ["Ward W. Vuillemot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-keyring = "0.1.0"
rand = "0.9.2"
base64 = "0.22.1"
keyring = "3.6.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

